fix: layout broken

--- a/styles/dates.css
+++ b/styles/dates.css
@@ -50,20 +50,17 @@ section#dates-container header form input#date, section#dates-container header f
 }
 
 section#dates-container header form button[type="submit"] {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: #7450AC;
     border-radius: 6px;
+    border: 0;
+    width: 100%;
     height: 3rem;
+    padding: 0.75rem;
     font-size: 1rem;
     font-weight: bold;
-    background-color: #7450AC;
     color: #FBF9FE;
-    border: 0;
-    align-self: flex-end;
-    padding: 0.75rem;
     cursor: pointer;
-    width: 100%;
+    align-self: flex-end;
 }
 
 section#dates-container ul#dates {
